--- a/vignettes/quickcode_r_introduction.Rmd
+++ b/vignettes/quickcode_r_introduction.Rmd
@@ -31,35 +31,37 @@ install.packages("quickcode") # when published
 ## List of many cool functions to use
 
 ```
-clean
-grapes-nin-grapes
-not.numeric
-not.null
-not.empty
-not.vector
-not.integer
-not.environment
-not.data
-not.logical
-libraryAll
-g.mean
-sd.gm
-cv.gm
-vector_push
-list_push
-inc
-data_push
-vector_shuffle
-data_shuffle
-refresh
-insertInText
+"%nin%"
 add.header
 add.snippet.clear
-header.rmd
-sample_by_column
+add_key
+ai.duplicate
+clean
+cv.gm
+data_push
+data_shuffle
 duplicate
-number
+g.mean
+header.rmd
+inc
 init
+insertInText
+libraryAll
+list_push
+not.data
+not.empty
+not.environment
+not.integer
+not.logical
+not.null
+not.numeric
+not.vector
+number
+refresh
+sample_by_column
+sd.gm
+vector_push
+vector_shuffle
 
 ```
 
