Update clean function

--- a/vignettes/quickcode_r_introduction.Rmd
+++ b/vignettes/quickcode_r_introduction.Rmd
@@ -35,20 +35,26 @@ install.packages("quickcode") # when published
 add.header
 add.snippet.clear
 add_key
-ai.duplicate
 clean
+refresh
 cv.gm
+data_pop
+data_pop_filter
 data_push
 data_shuffle
 duplicate
+ai.duplicate
 g.mean
 header.rmd
 inc
+plus
+minus
 init
 insertInText
 libraryAll
 list_push
 not.data
+not.duplicated
 not.empty
 not.environment
 not.integer
@@ -57,9 +63,9 @@ not.null
 not.numeric
 not.vector
 number
-refresh
 sample_by_column
 sd.gm
+vector_pop
 vector_push
 vector_shuffle
 
