--- a/vignettes/quickcode_r_introduction.Rmd
+++ b/vignettes/quickcode_r_introduction.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "NOT functions, vector_shuffle, data_pop,  and init function amongst many great new functions in the quickcode R package"
-author: "O.N Obianom"
+author: "Obinna (OBI) Obianom"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
