--- a/inst/sample codes/downloadImages.Rmd
+++ b/inst/sample codes/downloadImages.Rmd
@@ -5,19 +5,38 @@ date: "2023-10-22"
 output: html_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+```{r}
+# install quickcode if not available
+# install.packages(quickcode)
+
+# load quickcode library
+library(quickcode)
+
+# let's load the r2resize to provide toolbars for the image resizing
+library(r2resize)
+add.resizer(line.color = "yellow",line.height = "5px")
+
 ```
 
-## Download 2 random images from the school category and display
+## Download 3 random images from the school category and display
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
-```{r cars}
-summary(cars)
+```{r download school images}
+storlocation <- tempdir()
+genRandImg(fp = storlocation, cat = "school", )
+
+getdownloadedfiles = list.files(path = storlocation, pattern = ".png")
 ```
+
+Display the images:
+
+`r paste0("![](",getdownloadedfiles[1],")")`
+`r paste0("![](",getdownloadedfiles[2],")")`
+`r paste0("![](",getdownloadedfiles[3],")")`
+
 
 ## Quick links
 
