--- a/vignettes/nullish_coalescing_operator_r.Rmd
+++ b/vignettes/nullish_coalescing_operator_r.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "Introducing the Nullish coalescing operator in the quickcode R package"
+title: "5. Introducing the Nullish coalescing operator in the quickcode R package"
 author: "Obinna (OBI) Obianom"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Introducing the Nullish coalescing operator in the quickcode R package}
+  %\VignetteIndexEntry{5. Introducing the Nullish coalescing operator in the quickcode R package}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -16,12 +16,16 @@ knitr::opts_chunk$set(
 )
 ```
 
+## About the nullish coalescing operator
 
 The nullish coalescing operator, also known as the nullish assignment operator, is a logical operator that was introduced in ECMAScript 2020. It has the form ?? and is used to define a default value for a variable if that variable is null or undefined.
 
 In statistical programming and data analysis with R, dealing with missing or undefined values is very common. Oftentimes variables may be initialized without a value, or functions may return undefined if no suitable value can be determined. Previously in R, programmers would have to explicitly check if a value was NULL using if/else statements before using it or assigning a default.
 
 The nullish coalescing operator with the Quickcode R package helps address this in a more succinct way. It allows defining a fallback value inline, without needing an additional check. This can make code more readable where default values are assigned.
+
+
+## Example of usage
 
 ```
 
